# AspNetCore.Diagnostics.HealthChecks

./: .editorconfig  .env  .gitignore  AspNetCore.Diagnostics.HealthChecks.sln  AspNetCore.Diagnostics.HealthChecks.sln.bak  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  DroppedText-20220601.txt  Nuget.config  README.md  appveyor.yml  build-docker-image.ps1  build-operator-image.ps1  build.ps1  docker-compose.yml  dotnet-install.ps1  global.json  healthchecks_clickhouse_ci.yml  healthchecks_publisher_cloudwatch_cd_preview.yml  healthchecks_publisher_cloudwatch_ci.yml  install-sdk.ps1  sdk-version
.config/: dotnet-tools.json
.github/: codecov.yml  dependabot.yml  labeler.yml  pull_request_template.md
AzureDevOpsTasks/: README.md  luisfraile.vss-services-aspnetcorehealthcheck-gate-0.0.1.vsix  overview.md  vss-extension.json
HealthChecks.Gcp.CloudFirestore/: CloudFirestoreHealthCheck.cs
HealthChecks.UI.PostgreSQL/: HealthChecks.UI.PostgreSQL.csproj  Program.cs  Startup.cs  appsettings.json
HealthChecks.Vault.Core.Tests/: HealthChecks.Vault.Core.Tests.csproj  UnitTest1.cs
HealthChecks.Vault.Tests/: HealthCheckVaultTest.cs  HealthCheks.Vault.Tests.csproj
HealthCheks.Vault/: HealthCheckVault.cs  HealthChecksVault.cs  HealthCheks.Vault.csproj  IVaultAuthMethodInfo.cs  LdapAuthMethodInfoOptions .cs  (+4 more)
HealthCheks.Vault.Test/: HealthChecks.Vault.HealthAndConnectionTest.cs  HealthCheks.Vault.Tests.csproj  UnitTest1.cs
deploy/operator/installer/: .gitignore  Cargo.toml
deploy/operator/installer/src/: main.rs  tree.rs
doc/: ui-docker.md  (+6 more)
(+1693 files in other folders)
