[package]
name = "installer"
version = "0.1.0"
authors = ["Carlos Landeras <carlos.landeras@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
surf = "1.0.3"
async-std = { version = "1.0", features = ["attributes"] }
crossterm = "0.17.3"
